Added a style for pages and controllers
Added a new controllers for admin panel, it's a controller for all posts, all users and comment by post. Also, added an operation delete post and comment.